--- a/pages/projects.html
+++ b/pages/projects.html
@@ -74,7 +74,7 @@
                         Projects
                     </h1>
                     <div class="projects-grid">
-                        <a href="file.html" class="project-card">
+                        <a href="temp.html" class="project-card">
                             <div class="project-card-content">
                                 <h3 class="project-title">Temperature & Humidity</h3>
                                 <p class="project-description">Some text that
@@ -82,7 +82,7 @@
                             </div>
                             <button class="project-button">Start</button>
                         </a>
-                        <a href="file.html" class="project-card">
+                        <a href="sound-sensor.html" class="project-card">
                             <div class="project-card-content">
                                 <h3 class="project-title">Smart switch with sound ensor</h3>
                                 <p class="project-description">Some text that
@@ -90,7 +90,7 @@
                             </div>
                             <span class="project-button">Start</span>
                         </a>
-                        <a href="file.html" class="project-card">
+                        <a href="Radar-Systems.html" class="project-card">
                             <div class="project-card-content">
                                 <h3 class="project-title">Radar Systems</h3>
                                 <p class="project-description">Some text that
@@ -98,7 +98,7 @@
                             </div>
                             <span class="project-button">Start</span>
                         </a>
-                        <a href="file.html" class="project-card">
+                        <a href="Servo-control.html" class="project-card">
                             <div class="project-card-content">
                                 <h3 class="project-title">Servo motor control</h3>
                                 <p class="project-description">Some text that
@@ -106,7 +106,7 @@
                             </div>
                             <span class="project-button">Start</span>
                         </a>
-                        <a href="file.html" class="project-card">
+                        <a href="Calculator.html" class="project-card">
                             <div class="project-card-content">
                                 <h3 class="project-title">Calculator</h3>
                                 <p class="project-description">Some text that
@@ -114,7 +114,7 @@
                             </div>
                             <span class="project-button">Start</span>
                         </a>
-                        <a href="file.html" class="project-card">
+                        <a href="Auto-attendance.html" class="project-card">
                             <div class="project-card-content">
                                 <h3 class="project-title">Automatic attendanceRFID</h3>
                                 <p class="project-description">Some text that
